--- a/TODO
+++ b/TODO
@@ -2,8 +2,8 @@
 - THE SHOP
 - Making Nemesis and Black widow customizations different
 - Responsiveness for Contact us, Our story, Press, shop
-- Fix dropdown menu for horizontal menu
 - Make active page text red in nav
 - Accesibility overlay
 - Login
 - Cart
+- Make submit button work
