--- a/TODO
+++ b/TODO
@@ -1,10 +1,6 @@
-- Add header to nemesis and black widow pages
 - THE SHOP
 - Making Nemesis and Black widow customizations different
-- Responsiveness for Contact us, Our story, Press, shop
-- Make active page text red in nav
+- Responsiveness for Our story, Press, shop
 - Accesibility overlay
 - Login
 - Cart
-- Make submit button work
-- Add icons to contact info
