--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 - THE SHOP
 - Making Nemesis and Black widow customizations different
-- Responsiveness for Our story, Press, shop
+- Responsiveness for Our story, shop
 - Accesibility overlay
 - Login
 - Cart
+- Add header text for press and our story
